--- a/style.css
+++ b/style.css
@@ -18,3 +18,23 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+
+#calendar {
+    display: grid;
+    grid-template-columns: repeat(7, 150px);
+    gap: 3px;
+
+}
+
+.day {
+    width: 150px;
+    height: 150px;
+    padding: 10px;
+    background-color: #6366f1; 
+    border-radius: 3px;
+    transition: all .3s;
+}
+.day:hover {
+    background-color: #4f46e5;
+}
